[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eii_utilitario"
version = "0.1.0"
description = "Utilidades para entrada y salida en consola"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
]

[tool.setuptools.packages.find]
include = ["eii_utils*"]
